--- a/configuration.properties
+++ b/configuration.properties
@@ -1,2 +1,3 @@
-url= https://gmibank-qa-environment.com
+homepage_url= https://gmibank-qa-environment.com
+loginpage_url=https://gmibank-qa-environment.com/login
 browser= chrome
